[workspace]
members = ["packages/*", "contracts/*"]
resolver = "2"

[workspace.dependencies]
# nois = { git = "https://github.com/noislabs/nois", branch = "add-published-time" }
nois = "0.7.0"

[profile.release.package.nois-protocol]
codegen-units = 1
incremental = false

[profile.release.package.multitest]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
panic = 'abort'
debug = false
debug-assertions = false
