[package]
name = "nois-multitest"
version = "0.7.3"
authors = []
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
nois-delegator = { path = "../nois-delegator"}
nois-oracle = { path = "../nois-oracle"}

cosmwasm-std = { version = "1.1.5", features = ["iterator", "ibc3"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }


[dev-dependencies]
cw-multi-test = "0.16.1"