[package]
name = "nois-demo"
version = "0.15.4"
authors = ["Simon Warta <webmaster128@users.noreply.github.com>"]
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]
cosmwasm-std = { version = "2", features = ["iterator"] }
cosmwasm-schema = { version = "2" }
cw-storage-plus = { version = "2" }
nois.workspace = true
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
