[package]
name = "nois-drand"
version = "0.13.7"
authors = []
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
nois.workspace = true
drand-common = { path = "../../packages/drand-common" }
cosmwasm-std = { version = "1.2.7", features = ["iterator", "ibc3"] }
cosmwasm-schema = { version = "1.2.7" }
cw-storage-plus = { version = "1.1.0" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
sha2 = "0.10.6"

# Drand dependencies
hex = { version = "0.4" }
drand-verify = "0.5.0"
