[package]
name = "nois-monitoring"
version = "0.10.2"
authors = ["Katarina | Nois Network", "Simon Warta <webmaster128@users.noreply.github.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.2.1" }
cosmwasm-schema = { version = "1.2.1" }
cw-storage-plus = { version = "1.0.0" }
nois.workspace = true
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

[dev-dependencies]
