[package]
name = "nois-oracle"
version = "0.7.0"
authors = []
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
nois-protocol = { path = "../../packages/nois-protocol"}
nois = "0.5.1"
cosmwasm-std = { version = "1.1.5", features = ["iterator", "ibc3"] }
cosmwasm-schema = { version = "1.1.5" }
cw-storage-plus = { version = "0.16.0" }
schemars = "0.8.10"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

# Drand dependencies
hex = { version = "0.4" }
drand-verify = "0.3.0"

[dev-dependencies]
