[package]
name = "nois-payment"
version = "0.15.1"
authors = []
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
anybuf = "0.3.0"
cosmwasm-std = { version = "1.4.0", features = ["stargate"] }
cosmwasm-schema = { version = "1.4.0" }
cw-storage-plus = { version = "1.1.0" }
nois.workspace = true
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
hex = { version = "0.4" }
