[package]
name = "nois-proxy-governance-owned"
version = "0.15.4"
authors = []
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = ["nois-proxy/library"]

[dependencies]
nois-proxy = { path = "../../contracts/nois-proxy", features = ["governance_owned"]}

[dev-dependencies]
cosmwasm-schema = { version = "2" }
