[package]
name = "nois-proxy"
version = "0.4.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
nois-protocol = { path = "../../packages/nois-protocol"}
cosmwasm-std = { version = "1.1.0", features = ["iterator", "ibc3"] }
cosmwasm-schema = { version = "1.1.0" }
cw-storage-plus = { version = "0.14.0" }
nois = { git = "https://github.com/noislabs/nois.git", branch = "main" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
