[package]
name = "nois-proxy"
version = "0.13.7"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

# When the contract is owned by governance of the chain, sudo messages are exposed
# that allow withdrawing funds.
governance_owned = []

[dependencies]
anybuf = "0.1.0"
nois-protocol = { path = "../../packages/nois-protocol"}
cosmwasm-std = { version = "1.3.1", features = ["iterator", "ibc3"] }
cosmwasm-schema = { version = "1.3.1" }
cw-storage-plus = { version = "1.1.0" }
nois.workspace = true
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
